product_docs/docs/pem/10/pem_rest_api/v6/export-custom-alert-templates.mdx
---
navTitle: Export Custom Alert Templates
pdfExclude: true
title: 'EDB Postgres Enterprise Manager REST APIs v6.0: Export Custom Alert Templates'

---



## `post__alert_custom_export_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X POST https://PEM-SERVER-IP/pem/api/v6/alert/custom/export/ \
  -H 'Content-Type: application/json' \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Content-Type': 'application/json',
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.post('https://PEM-SERVER-IP/pem/api/v6/alert/custom/export/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript
const inputBody = '{
  "alert_templates": [
    0
  ]
}';
const headers = {
  'Content-Type':'application/json',
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v6/alert/custom/export/',
{
  method: 'POST',
  body: inputBody,
  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`POST /alert/custom/export/`

Export custom alert templates

**Body parameter**

```json
{
  "alert_templates": [
    0
  ]
}
```

<span id="post__alert_custom_export_-parameters"></span>

### Parameters



| Name         | In     | Type                                                                            | Required | Description            |
| ------------ | ------ | ------------------------------------------------------------------------------- | -------- | ---------------------- |
| X-Auth-Token | header | string                                                                          | true     | Token of authorization |
| body         | body   | [CustomAlertTemplateExportData](schemas.mdx#tocs_customalerttemplateexportdata) | true     | none                   |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "version": 1,
    "alert_templates": [
      {
        "name": "string",
        "description": "string",
        "reference_id": "string",
        "default_history_retention": 0,
        "object_type": 0,
        "sql": "string",
        "applicable_on_server": "ALL",
        "default_check_frequency": 0,
        "threshold_unit": "string",
        "is_system_template": true,
        "is_auto_create": true,
        "thresholds": [
          0
        ],
        "operator": ">",
        "high_threshold_value": "string",
        "medium_threshold_value": "string",
        "low_threshold_value": "string",
        "info_sql": "string",
        "probes": [
          {
            "probe_name": "string",
            "collection_method": "w",
            "enabled": true,
            "target_type": 0,
            "any_server_version": true,
            "interval": 0,
            "lifetime": 0,
            "discard_history": true,
            "platform": "string",
            "probe_code": "string",
            "probe_columns": [
              {
                "pc_name": "string",
                "pc_data_type": "bigint",
                "pc_unit": "string",
                "pc_col_type": "m",
                "pc_graphable": true,
                "pc_calc_pit": true,
                "pc_pit_default": true
              }
            ],
            "alternate_code": [
              {
                "server_version_id": 0,
                "server_probe_code": "string"
              }
            ],
            "internal_name": "string"
          }
        ]
      }
    ]
  }
]
```

</Details>

<span id="post__alert_custom_export_-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="post__alert_custom_export_-responseschema"></span>

### Response Schema



Status Code **200**

| Name                         | Type                                                                                               | Required | Restrictions | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| ---------------------------- | -------------------------------------------------------------------------------------------------- | -------- | ------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| *anonymous*                  | \[[CustomAlertTemplateExportResponseData](schemas.mdx#tocs_customalerttemplateexportresponsedata)] | false    | none         | none                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| » version                    | integer                                                                                            | false    | none         | Version of the alert template export.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| » alert_templates            | \[[AlertImportExportTemplate](schemas.mdx#tocs_alertimportexporttemplate)]                         | false    | none         | none                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| »» name                      | string                                                                                             | false    | none         | Name of the alert template. NOTE: It is a mandatory parameter for the POST request.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| »» description               | string                                                                                             | false    | none         | Description about the alert template. NOTE: It is a mandatory parameter for the POST request.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| »» reference_id              | string                                                                                             | false    | none         | Internal identifier for the alert template.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| »» default_history_retention | integer                                                                                            | false    | none         | Defines the history retention period in days for this type of alerts. NOTE: It is a mandatory parameter for the POST request.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| »» object_type               | integer                                                                                            | false    | none         | Defines the type of the object on which this alert template is applicable to. <ul><li>System wide alert template will be <b>50</b>.</li><li>An alert template applicable to an agent will be <b>100</b>.</li><li>An alert template applicable to a managed server will be <b>200</b>.</li><li>An alert template applicable to a database for a particular monitored server will be <b>300</b>.</li><li>An alert template applicable to a schema on a particular database for the managed server will be <b>400</b>.</li><li>An alert template applicable to a table on a particular schema for the database on a monitored server will be <b>500</b>.</li><li>An alert template applicable to an index on a particular schema for the database on a monitored server will be <b>600</b>.</li><li>An alert template applicable to a sequence on a particular schema for the database on a monitored server will be <b>700</b>.</li><li>An alert template applicable to a function on a particular schema for the database on a monitored server will be <b>800</b>.</li></ul>NOTE: It is a mandatory parameter for the POST request. |
| »» sql                       | string                                                                                             | false    | none         | SQL query, possibly parameterized, to get a numeric indicating threshold reached. NOTE: It is a mandatory parameter for the POST request.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| »» applicable_on_server      | string                                                                                             | false    | none         | Template is applicable on which type of monitored server. Possible values are ALL, POSTGRES_SERVER, ADVANCED_SERVER. NOTE: It is a mandatory parameter for the POST request.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| »» default_check_frequency   | integer                                                                                            | false    | none         | Defines how frequently to check for the alert defined from this template (in minutes). NOTE: It is a mandatory parameter for the POST request.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| »» threshold_unit            | string                                                                                             | false    | none         | Unit in which threshold is calculated; purely for GUI, like MB/kB/seconds/days/...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| »» is_system_template        | boolean                                                                                            | false    | none         | Defines whether the given template is system defined or user defined. NOTE: It is not applicable for the the POST/PUT requests.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| »» is_auto_create            | boolean                                                                                            | false    | none         | Whether alert should be created as soon as agent or server is added to pem.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| »» thresholds                | [number]                                                                                           | false    | none         | Default threshold values. Values in the thresholds array must be in the sorted order based on the operator.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| »» operator                  | string                                                                                             | false    | none         | Operator to compare threshold values.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| »» high_threshold_value      | string                                                                                             | false    | none         | High threshold value.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| »» medium_threshold_value    | string                                                                                             | false    | none         | Medium threshold value.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| »» low_threshold_value       | string                                                                                             | false    | none         | Low threshold value.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| »» info_sql                  | string                                                                                             | false    | none         | Specify the SQL query that will provide the detailed information about that alert on Dashboard.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| »» probes                    | [allOf]                                                                                            | false    | none         | none                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |

*allOf*

| Name                    | Type                                                                     | Required | Restrictions | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| ----------------------- | ------------------------------------------------------------------------ | -------- | ------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| »»» *anonymous*         | [CustomProbePostData](schemas.mdx#tocs_customprobepostdata)              | false    | none         | none                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| »»»» probe_name         | string                                                                   | false    | none         | Name of the probe.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| »»»» collection_method  | string                                                                   | false    | none         | Defines the method of statistics collection. PEM supports three methods for custom made probes. i.e. SQL, WMI, Batch/Shell script. <ul><li>'w' stands for WMI script.<br />It is applicable for the windows platform only, and target_type will be <b>100</b> (i.e. agent).</li><li>'b' stands for Batch/Shell script. 'target_type' for this will be always be <b>100</b> (i.e. agent). It will behave as batch script on windows otherwise as a shell script.</li><li>'s' stands for SQL script. It will applicable only for <b>200</b> (i.e. server), <b>300</b> (i.e. database), <b>400</b> (i.e. schema), <b>500</b> (i.e. table), <b>600</b> (i.e. index), <b>700</b> (i.e. sequence), <b>800</b> (i.e. function), <b>900</b> (i.e. view).</li></ul>                                                                                                                                                                                                                                                           |
| »»»» enabled            | boolean                                                                  | false    | none         | Defines whether the probe is enabled/disabled by default.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| »»»» target_type        | integer                                                                  | false    | none         | Defines the type of the object on which the probe is applicable to. <ul><li>A probe with target_type <b>100</b> is responsible for collecting statistics for an agent.</li><li>A probe with target_type <b>200</b> is responsible for collecting statistics for a monitored server.</li><li>A probe with target_type <b>300</b> is responsible for collecting statistics for a database.</li><li>A probe with target_type <b>400</b> is responsible for collecting statistics for a schema.</li><li>A probe with target_type <b>500</b> is responsible for collecting statistics for a table.</li><li>A probe with target_type <b>600</b> is responsible for collecting statistics for a index.</li><li>A probe with target_type <b>700</b> is responsible for collecting statistics for a sequence.</li><li>A probe with target_type <b>800</b> is responsible for collecting statistics for a function.</li><li>A probe with target_type <b>900</b> is responsible for collecting statistics for a view.</li></ul> |
| »»»» any_server_version | boolean                                                                  | false    | none         | Defines whether this probe is applicable to any version of Postgres variant. For more details, please follow the documenation.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| »»»» interval           | integer                                                                  | false    | none         | Defines how frequently the probe will collect the statistics (in seconds).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| »»»» lifetime           | integer                                                                  | false    | none         | Defines the history data retention time (in days). It does not have any effect, if 'discard_history' is set to true.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| »»»» discard_history    | boolean                                                                  | false    | none         | Defines whether to discard the history data. It will not store the history of the data for this probe, when 'discard_history' is set to false.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| »»»» platform           | string                                                                   | false    | none         | Defines on which platform this probe can run on. It is only applicable to an agent level probe.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| »»»» probe_code         | string                                                                   | false    | none         | A <b>SQL/Batch script/Shell script/WMI script</b> to collect the statistics as per definition of the code.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| »»»» probe_columns      | [object]                                                                 | false    | none         | none                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| »»»»» pc_name           | string                                                                   | false    | none         | Name of the column                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| »»»»» pc_data_type      | string                                                                   | false    | none         | Data type of the column.<br />Supported datatypes are:<ul><ul>bigint</ul><ul>char</ul><ul>decimal</ul><ul>double precision</ul><ul>integer</ul><ul>numeric</ul><ul>real</ul><ul>text</ul><ul>text\[]</ul><ul>timestamp</ul><ul>timestamptz</ul></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| »»»»» pc_unit           | string                                                                   | false    | none         | Returns the unit of the column.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| »»»»» pc_col_type       | string                                                                   | false    | none         | Returns the columns is part of the primary key of the internal table, or not. 'k' stands for a key column, and 'm' stands for a member/normal column.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| »»»»» pc_graphable      | boolean                                                                  | false    | none         | Returns whether the data of the column is graphable on a chart, or not.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| »»»»» pc_calc_pit       | boolean                                                                  | false    | none         | Returns whether server calculates the point-in-time for the metric data for this column.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| »»»»» pc_pit_default    | boolean                                                                  | false    | none         | Returns the metric is stored by point-in-time by default. Please refer the 'Custom Probes' section in the documentation for detailed information.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| »»»» alternate_code     | \[[AlternateServerProbeCode](schemas.mdx#tocs_alternateserverprobecode)] | false    | none         | none                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| »»»»» server_version_id | integer                                                                  | false    | none         | Server version id for the support monitored server<table class="model"><thead><tr><th>server_version_id</th><th>Database Server</th></tr></thead><thead /><tbody><tr><td>10905</td><td>PostgreSQL 9.5</td></tr><tr><td>10906</td><td>PostgreSQL 9.6</td></tr><tr><td>11000</td><td>PostgreSQL 10</td></tr><tr><td>11100</td><td>PostgreSQL 11</td></tr><tr><td>11200</td><td>PostgreSQL 12</td></tr><tr><td>11300</td><td>PostgreSQL 13</td></tr><tr><td>20905</td><td>Postgres Plus Advanced Server 9.5</td></tr><tr><td>20906</td><td>Postgres Plus Advanced Server 9.6</td></tr><tr><td>21000</td><td>EDB Postgres Advanced Server 10</td></tr><tr><td>21100</td><td>EDB Postgres Advanced Server 11</td></tr><tr><td>21200</td><td>EDB Postgres Advanced Server 12</td></tr><tr><td>21300</td><td>EDB Postgres Advanced Server 13</td></tr></tbody></table>                                                                                                                                                      |
| »»»»» server_probe_code | string                                                                   | false    | none         | SQL query to run on the specified server version                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |

*and*

| Name               | Type   | Required | Restrictions | Description                                                          |
| ------------------ | ------ | -------- | ------------ | -------------------------------------------------------------------- |
| »»» *anonymous*    | object | false    | none         | none                                                                 |
| »»»» internal_name | string | false    | none         | Internal name of the probe from the system where probe was exported. |

##### Enumerated Values

| Property             | Value            |
| -------------------- | ---------------- |
| applicable_on_server | ALL              |
| applicable_on_server | POSTGRES_SERVER  |
| applicable_on_server | ADVANCED_SERVER  |
| operator             | >                |
| operator             | &lt;             |
| collection_method    | w                |
| collection_method    | b                |
| collection_method    | s                |
| pc_data_type         | bigint           |
| pc_data_type         | char             |
| pc_data_type         | decimal          |
| pc_data_type         | double precision |
| pc_data_type         | integer          |
| pc_data_type         | numeric          |
| pc_data_type         | real             |
| pc_data_type         | text             |
| pc_data_type         | text\[]          |
| pc_data_type         | timestamp        |
| pc_data_type         | timestamptz      |
| pc_col_type          | m                |
| pc_col_type          | k                |

!!! info

    This operation does not require authentication




<span id="edb-postgres-enterprise-manager-rest-apis-import-custom-alert-templates"></span>
